# dcl-agents

./: .gitignore  CHANGELOG.md  README.md  pytest.ini  requirements.txt
.workspace/: PROJECT_ARCHITECTURE.md  PROJECT_CONCEPT.md  PROJECT_REQUIREMENTS.md
.workspace/SP-001_dcl_agent_implementation/: IMP-001_DCL_AGENT_Implementation_Plan.md  REQ-001_DCL Agent.md  SCOPE-001.md  TSD-001_DCL_Agent.md  walkthrough-001.md
.workspace/SP-002_Aliases_in_DCL_instructions/: IMP-002_Aliases_in_DCL_instructions.md  REQ-002_Aliases_in_DCL_instructions.md  SCOPE-002.md  TSD-002_Aliases_in_DCL_instructions.md  walkthrough-002.md
.workspace/SP-003_invocation_context_strategies_refinement/: IMP-003_Resources_Formatting.md  REQ-003_Resources_Formatting.md  SCOPE-003_Resources_Formatting.md  TSD-003_Resources_Formatting.md  Walkthrough.md
.workspace/SP-004_notebook_support/: IMP-004_packaging.md  REQ-004_notebook_support.md  SCOPE-004.md  TSD-004_packaging.md  WALKTHROUGH.md
dcl-god-mode/: index.yaml
src/dcl_agent/: __init__.py  agent.py  dcl.lark  exceptions.py  pyproject.toml
src/dcl_agent/adapter/: base.py  gemini.py  mock.py
src/dcl_agent/loader/: loader.py  registry.py
src/dcl_agent/model/: __init__.py
src/dcl_agent/parser/: parser.py
src/dcl_agent/strategies/: base.py  concat.py  gemini.py
tests/: report.html  report.xml  test_agent.py  test_concat_strategy_formatting.py  test_formatter_utils.py  test_gemini_strategy_formatting.py  test_loader.py  test_loader_aliases.py  test_loader_raw.py  test_parser.py  test_registry_aliases.py  test_strategies.py
(+24 files in other folders)
